fix: fix class name in JS for checkbox and CSS style for proper vertical align of add item text input

--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ body {
 }
 .add-task__form {
   display: flex;
+  align-items: center;
 }
 .todo-tasks,
 .completed-tasks {
